@@ -17,6 +17,9 @@ debhelper (11.1) UNRELEASED; urgency=medium
   * dh_missing: Make --list-missing the default in compat 12.
     Thanks to Daniel Leidert and Christian Göttsche for the
     suggestions.  (Closes: #650129, #858834)
+  * meson.pm: Set LC_ALL to C.UTF-8 when invoking meson and
+    debcrossgen (helper tool for cross-building).  Thanks to
+    Jeremy Bicha for the suggestion.  (Closes: #873831)
 
  -- Niels Thykier <niels@thykier.net>  Sun, 17 Dec 2017 07:59:18 +0000
 
